minix/include/minix/sysutil.h

void env_setargs(int argc, char *argv[]);
int env_parse(const char *env, const char *fmt, int field,
	long *param, long min, long max);
int printf(const char *fmt, ...);
u32_t sys_hz(void);
int micro_delay(u32_t micros);