minix/include/minix/sef.h

/* SEF entry points for system processes. */
void sef_startup(void);
/* Callback type definitions. */
typedef int(*sef_cb_init_t)(int type, sef_init_info_t *info);
/* Callback registration helpers. */
void sef_setcb_init_fresh(sef_cb_init_t cb);
/* Callback type definitions. */
typedef void(*sef_cb_signal_handler_t)(int signo);
/* Callback registration helpers. */
void sef_setcb_signal_handler(sef_cb_signal_handler_t cb);